2010-09-30  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (param-edit): Make input field match param type.
	(param-details): Make value column match param type.

2010-09-29  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (html-report-formats-table): Add "(last verified)" to
	trust heading.

2010-09-29  Matthew Mundell <matthew.mundell@greenbone.net>

	Add editing of report format active flag.

	* src/gsad.c (exec_omp_post): Pass enable param to save_report_format_omp.

	* src/gsad_omp.c (save_report_format_omp): Add active arg.  Save active flag.

	* src/gsad_omp.h: Update header accordingly.

	* src/html/omp.xsl (html-edit-report-format-form): Add active radio.

2010-09-29  Matthew Mundell <matthew.mundell@greenbone.net>

	Add simple editing of report format params.

	* src/gsad.c (struct gsad_connection_info, free_resources)
	(serve_post): Add next and report_format_id params.
	(exec_omp_post): Add save_report_format page handling.
	(exec_omp_get): Remove save_report_format page handling.

	* src/gsad_omp.c (check_modify_report_format): New function.
	(edit_report_formats): Request params with report formats.
	(save_report_format_omp): Add param array arg.  Save params.

	* src/gsad_omp.h: Update headers accordingly.

	* src/html/omp.xsl (html-edit-report-format-form): Switch form to POST.
	Add param fields.
	(param-edit): New template.

2010-09-28  Matthew Mundell <matthew.mundell@greenbone.net>

	Add a slave option to the Performance page.

	* src/gsad.c (exec_omp_get): Pass slave ID to get_system_reports_omp.
	(request_handler): Pass slave ID to get_system_report_omp.

	* src/gsad_omp.c (get_system_reports_omp): Add slave ID arg.  Also get
	slaves.
	(get_system_report_omp): Add slave ID arg.

	* src/gsad_omp.h: Update headers accordingly.

	* src/html/gsad.xsl (html-gsa-navigation): Add slave_id to performance
	URL.

	* src/html/omp.xsl (system_report): Add slave_id to system report IMG.