@@ -1,3 +1,8 @@
+2010-10-04  Matthew Mundell <matthew.mundell@greenbone.net>
+
+	* src/gsad_omp.c (save_report_format_omp): Add NULL gaurd around param
+	loop.
+
 2010-09-30  Matthew Mundell <matthew.mundell@greenbone.net>
 
 	* src/html/omp.xsl (param-edit): Make input field match param type.
